# kpp

./: .gitignore  CMakeLists.txt  ClangTooling.hpp  Format.cpp  Format.hpp  KubeFormat.cpp  KubeTranspiler.cpp  Makefile  Passes.cpp  Passes.hpp  Passes_CppToKpp.cpp  Passes_KppToCpp.cpp  README.md  Test01.hpp  Test02.hpp  Test03.hpp  Transpiler.cpp  Transpiler.hpp  buildWindows.ps1
Assets/: Input01.hpp  Output01.hpp
Kompiler/: Base.hpp  CMakeLists.txt  Lexer.cpp  Lexer.hpp  Parser.hpp  Utf8.hpp
Kompiler/Tests/: CMakeLists.txt  tests_Lexer.cpp
cmake/: FindLibClang.cmake
